FRONTEND-MENTOR-mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <div class="container">
 
-    <div class="photo"><img src="./images/image-product-desktop.jpg" alt="Foto colonia"></div>
+    <div class="photo"><img class="photo" src="./images/image-product-desktop.jpg" alt="Foto colonia"></div>
+    <div><img class="photo-mobile" src="./images/image-product-mobile.jpg" alt="Foto colonia movil"></div>
       <div class="text">
         <p class="parfum">PERFUME</p>
         <p class="name-parfum">Gabrielle Essence Eau De Parfum</p>
